# TruePulse

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  complete_update.yaml  docker-compose.yml  drop_columns.sql  env_vars.json  full_containerapp.yaml  probe_update.yaml  quarantine-disable.json  temp_check.py  temp_update.yaml  working_template.json
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
src/backend/ai/: __init__.py  event_aggregator.py  poll_generator.py
src/backend/api/: deps.py
src/backend/core/: config.py  encryption.py  events.py  middleware.py  security.py
src/backend/data/: locations.json
src/backend/db/: __init__.py  base.py  cosmos_session.py  session.py  types.py
src/backend/models/: __init__.py  achievement.py  cosmos_documents.py  distributed_lock.py  location.py  passkey.py  poll.py  poll_feedback.py  user.py  user_vote_history.py  vote.py
src/backend/repositories/: __init__.py  cosmos_achievement_repository.py  cosmos_challenge_repository.py  cosmos_location_repository.py  cosmos_poll_repository.py  cosmos_user_repository.py  cosmos_vote_repository.py  feedback_repository.py  poll_repository.py  provider.py  user_repository.py  vote_repository.py
src/backend/schemas/: __init__.py  auth.py  converters.py  feedback.py  gamification.py  poll.py  user.py  vote.py
src/backend/scripts/: _common.py  add_ad_tracking.py  add_display_name.py  (+23 more)
(+217 files in other folders)
