[project]
name = "truepulse-backend"
version = "0.1.0"
description = "TruePulse Polling Platform Backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E712",  # Allow == True/False for SQLAlchemy ORM queries
    "E402",  # Allow module-level imports not at top (sometimes needed for circular imports)
    "E501",  # Line too long - handled by formatter, allow exceptions for HTML templates
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests (common for setup)
"services/email_service.py" = ["E501"]  # HTML email templates have long lines
"ai/*" = ["E501"]  # Mock data in AI modules can have long strings

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
